# spotifycli

./: Cargo.toml  LICENSE  README.md
src/: command.rs  config.rs  fetch.rs  fetcher.rs  input.rs  interact.rs  invoke.rs  main.rs  model.rs  play.rs
