[package]
name = "spotifycli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librespot = "0.4.1"
text_io = "0.1.10"
rpassword = "7.0"
tokio = { version = "1", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.15.0"
log = "0.4.17"
env_logger = "0.9.0"